--- a/BLAZAMGui/UI/Search/SearchPageHeader.razor
+++ b/BLAZAMGui/UI/Search/SearchPageHeader.razor
@@ -16,7 +16,7 @@
         <MudHidden Breakpoint="Breakpoint.Xs" Invert=true>
             <MudStack Row="true">
                 <MudSpacer/>
-                <MudButton Color="Color.Tertiary" OnClick="@(()=>{_searchModal?.Show();})" Class="align-self-center">Search</MudButton>
+                <MudButton Color="Color.Tertiary" OnClick="@(()=>{_searchModal?.ShowAsync();})" Class="align-self-center">Search</MudButton>
                 <MudSpacer />
 
             </MudStack>
