--- a/BLAZAM/Pages/Configure/Fields.razor
+++ b/BLAZAM/Pages/Configure/Fields.razor
@@ -13,7 +13,7 @@
     <ToolBarContent>
         <MudText Typo="Typo.h6">Fields</MudText>
         <MudSpacer />
-        <MudIconButton Icon="@Icons.Material.Filled.Add" OnClick="@(()=>{addFieldModal?.Show();})" />
+        <MudIconButton Icon="@Icons.Material.Filled.Add" OnClick="@(()=>{addFieldModal?.ShowAsync();})" />
         <AppDocumentationButton Page="/admin/fields" />
 
     </ToolBarContent>
