--- a/BLAZAMGui/Layouts/AppUserButton.razor
+++ b/BLAZAMGui/Layouts/AppUserButton.razor
@@ -31,10 +31,10 @@
         }
 
 
-        <MudMenuItem OnClick="@(()=>{profileModal?.Show();})" Icon="@Icons.Material.Filled.Settings">
+        <MudMenuItem OnClick="@(()=>{profileModal?.ShowAsync();})" Icon="@Icons.Material.Filled.Settings">
             @AppLocalization["Profile Settings"]
         </MudMenuItem>
-        <MudMenuItem OnClick="@(()=>{notificationsModal?.Show();})" Icon="@Icons.Material.Filled.Notifications">
+        <MudMenuItem OnClick="@(()=>{notificationsModal?.ShowAsync();})" Icon="@Icons.Material.Filled.Notifications">
             @AppLocalization["Notification Settings"]
         </MudMenuItem>
         <MudMenuItem Href="https://docs.blazam.org" Target="_blank" Icon="@Icons.Material.Filled.Book">
