--- a/BLAZAMGui/UI/SessionExpirationWarningProvider.razor
+++ b/BLAZAMGui/UI/SessionExpirationWarningProvider.razor
@@ -22,7 +22,7 @@
             if (ExpiredModal != null)
             {
                 ExpiredModal.AllowClose = false;
-                ExpiredModal.Show();
+                ExpiredModal.ShowAsync();
             }
         }
         string formattedTimeLeft = "";
@@ -83,7 +83,7 @@
             var timeLeft = _ticket?.Properties.ExpiresUtc - DateTime.UtcNow;
             if (timeLeft > TimeSpan.FromSeconds(0) && timeLeft < TimeSpan.FromMinutes(2) && ExpirationWarningModal?.IsShown == false)
             {
-                await InvokeAsync(() => { ExpirationWarningModal.Show(); });
+                await InvokeAsync(() => { ExpirationWarningModal.ShowAsync(); });
 
             }
         }
