--- a/BLAZAMGui/UI/Settings/Modals/UploadCertificateModalContent.razor
+++ b/BLAZAMGui/UI/Settings/Modals/UploadCertificateModalContent.razor
@@ -6,7 +6,7 @@
     <MudSelectList Label=@AppLocalization["Certificate Type"] Values="@(new List<string>{"PFX","Crt and Key"})"  @bind-Value=SelectedCertType />
         @if(SelectedCertType=="PFX"){
         <MudFileUpload T="IBrowserFile" FilesChanged="LoadPFX" Accept=".pfx">
-        <ButtonTemplate>
+        <ActivatorContent>
             <MudButton HtmlTag="label"
                        Variant="Variant.Filled"
                        Color="Color.Primary"
@@ -14,7 +14,7 @@
                        for="@context.Id">
                 Upload PFX
             </MudButton>
-        </ButtonTemplate>
+        </ActivatorContent>
         <SelectedTemplate>
             @if (context != null)
             {
@@ -32,7 +32,7 @@
     else
     {
         <MudFileUpload T="IBrowserFile" FilesChanged="LoadCert" Accept=".pem, .crt">
-            <ButtonTemplate>
+            <ActivatorContent>
                 <MudButton HtmlTag="label"
                            Variant="Variant.Filled"
                            Color="Color.Primary"
@@ -40,7 +40,7 @@
                            for="@context.Id">
                     Upload Certificate
                 </MudButton>
-            </ButtonTemplate>
+            </ActivatorContent>
             <SelectedTemplate>
                 @if (context != null)
                 {
@@ -54,7 +54,7 @@
         </MudFileUpload>
 
         <MudFileUpload T="IBrowserFile" FilesChanged="LoadKey" Accept=".pem, .key">
-            <ButtonTemplate>
+            <ActivatorContent>
                 <MudButton HtmlTag="label"
                            Variant="Variant.Filled"
                            Color="Color.Primary"
@@ -62,7 +62,7 @@
                            for="@context.Id">
                     Upload Key
                 </MudButton>
-            </ButtonTemplate>
+            </ActivatorContent>
             <SelectedTemplate>
                 @if (context != null)
                 {
