--- a/BLAZAMGui/UI/Settings/Permissions/DelegateEditor.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/DelegateEditor.razor
@@ -10,7 +10,7 @@
                   @bind-Value="@DelegateFilter" />
     <MudSpacer />
     <MudButton Color=Color.Secondary
-               OnClick="(()=>{trashModal.Show();})"><MudIcon Icon=@Icons.Material.Filled.RestoreFromTrash /></MudButton>
+               OnClick="(()=>{trashModal.ShowAsync();})"><MudIcon Icon=@Icons.Material.Filled.RestoreFromTrash /></MudButton>
 </MudStack>
 
 
@@ -28,7 +28,7 @@
     }
 }
 
-<MudButton Color=Color.Success OnClick="@(()=>{addGroupModal?.Show();})">
+<MudButton Color=Color.Success OnClick="@(()=>{addGroupModal?.ShowAsync();})">
     @AppLocalization["Create New Delegation Target"]
 </MudButton>
 
