--- a/BLAZAMGui/UI/Settings/Permissions/EditAccessLevel.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/EditAccessLevel.razor
@@ -66,7 +66,7 @@
 
                 @if (objectMap.ObjectType == ActiveDirectoryObjectType.User && objectMap.ObjectAccessLevelId != ObjectAccessLevels.Deny.Id)
                 {
-                    <MudSwitch Label="@AppLocalization["Allow Disabled User Access"]" @bind-Checked=objectMap.AllowDisabled />
+                    <MudSwitch T=bool Label="@AppLocalization["Allow Disabled User Access"]" @bind-Checked=objectMap.AllowDisabled />
                 }
 
 
