--- a/BLAZAMGui/UI/Outputs/TemplateInheritanceTreeView.razor
+++ b/BLAZAMGui/UI/Outputs/TemplateInheritanceTreeView.razor
@@ -10,23 +10,20 @@
                  Hover="true"
                  Class="py-3"
                  SelectedValueChanged=SelectedTemplateChanged
-                 MaxHeight="400px"
-                 Color="Color.Success">
-        <ItemTemplate>
-            <MudTreeViewItem Activated=@(context.Id.Equals(SelectedTemplate?.Id))
-                             Selected=@(context.Id.Equals(SelectedTemplate?.Id))
-                             Expanded="true"
-                             Items="@context.ChildTemplates"
-                             Value="@context">
-                <Content>
-                    <MudTreeViewItemToggleButton Expanded="true"
-                                                 Visible="@(context.ChildTemplates!=null)" />
+                 MaxHeight="400px">
+    <ItemTemplate>
+        <MudTreeViewItem Selected=@(context.Value.Id.Equals(SelectedTemplate?.Id)!=true)
+                         Expanded="true"
+                         Items="@context.Children"
+                         Value="@context.Value">
+            <Content>
+                <MudTreeViewItemToggleButton Expanded="true"
+                                             Visible="@(context.HasChildren!=null)" />
 
-                    <MudBadge
-                              Icon="@Icons.Material.Filled.VisibilityOff"
-                              Visible=@(!context.Visible)
-                              Color="Color.Warning">
-                        @context.Name
+                <MudBadge Icon="@Icons.Material.Filled.VisibilityOff"
+                          Visible=@(!context.Value.Visible)
+                          Color="Color.Warning">
+                    @context.Value.Name
                 </MudBadge>
             </Content>
         </MudTreeViewItem>
@@ -55,7 +52,7 @@
     /// The hashset of all templates, starting at the root templates that have no parents
     /// </summary>
     [Parameter]
-    public HashSet<DirectoryTemplate> RootTemplate { get; set; } = new HashSet<DirectoryTemplate>();
+    public IReadOnlyCollection<TreeItemData<DirectoryTemplate>> RootTemplate { get; set; } = new List<TreeItemData<DirectoryTemplate>>();
 
     /// <summary>
     /// The already or recently selected template
@@ -80,5 +77,5 @@
         await InvokeAsync(StateHasChanged);
 
     }
-
+   
 }
