--- a/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
@@ -114,7 +114,7 @@
         }
         catch
         {
-            
+
         }
         await InvokeAsync(StateHasChanged);
     }
@@ -126,7 +126,8 @@
     }
     protected override async void Save()
     {
-        if (!newAdminPassword.Equals(adminPasswordInDb))
+        var decryptedPass = adminPasswordInDb.Decrypt<string>();
+        if (!newAdminPassword.Equals(adminPasswordInDb) || decryptedPass.Equals(adminPasswordInDb))
         {
 
             settings.AdminPassword = newAdminPassword.Encrypt();
