--- a/BLAZAM/Pages/Computers/ViewBitLocker.razor
+++ b/BLAZAM/Pages/Computers/ViewBitLocker.razor
@@ -32,6 +32,8 @@
         _computer = (IADComputer)BitLocker.GetParent();
 
         LoadingData = false;
+        await AuditLogger.Searched(BitLocker);
+
         await RefreshEntryComponents();
     }
 
