--- a/BLAZAMGui/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAMGui/UI/Settings/ApplicationSettings.razor
@@ -31,7 +31,7 @@
 
     </SettingsField>
 
-    <SettingsField Label="@AppLocalization["User Helpdesk URL"]">
+ @*    <SettingsField Label="@AppLocalization["User Helpdesk URL"]">
 
             <MudTextField Label="@AppLocalization["User Helpdesk URL"]" Placeholder="If not provided, support links will be disabled" @bind-Value="@settings.UserHelpdeskURL">
                 <MudTooltip Display=Display.InlineFlex Margin=Margin.IsAuto.OnX Style="width:max-content" Text="Not Yet Implemented">
@@ -42,7 +42,7 @@
             </MudTextField>
 
     </SettingsField>
-
+ *@
 
 
     <SettingsField Label="@AppLocalization["Branding Icon"]">
