--- a/BLAZAMGui/UI/Settings/ApplicationSettings.razor
+++ b/BLAZAMGui/UI/Settings/ApplicationSettings.razor
@@ -30,7 +30,7 @@
                    @bind-Value="@settings.ForceHTTPS" />
 
     </SettingsField>
-
+@* 
     <SettingsField Label="@AppLocalization["User Helpdesk URL"]">
 
             <MudTextField Label="@AppLocalization["User Helpdesk URL"]" Placeholder="If not provided, support links will be disabled" @bind-Value="@settings.UserHelpdeskURL">
@@ -41,7 +41,7 @@
 
             </MudTextField>
 
-    </SettingsField>
+    </SettingsField> *@
 
 
 
