--- a/BLAZAMGui/UI/Groups/MemberOfList.razor
+++ b/BLAZAMGui/UI/Groups/MemberOfList.razor
@@ -4,10 +4,10 @@
     @if (Model.MemberOf.Count > 0)
     {
         <MudList Disabled=false
-         Dense=true
-         Clickable="false"
-         DisableGutters=true
-         Style="max-height:200px; overflow-y:auto;">
+                 Dense=true
+                 Clickable="false"
+                 DisableGutters=true
+                 Style="max-height:200px; overflow-y:auto;">
             @foreach (IADGroup g in Model.MemberOf.Where(group => group.CanRead).OrderBy(g => g.CanonicalName))
             {
                 if (g.CanRead)
@@ -22,13 +22,18 @@
                                 }
                                 else
                                 {
-                                    <MudLink Class="align-middle" OnClick="@(()=>{Nav.NavigateTo(g.SearchUri);})">@g.CanonicalName</MudLink>
+                                    <MudLink Class="align-middle"
+                                             OnClick="@(()=>{Nav.NavigateTo(g.SearchUri);})">@g.CanonicalName</MudLink>
 
                                 }
                                 <MudSpacer />
                                 @if (EditMode)
                                 {
-                                    <MudIconButton OnClick="@(()=>{Model.UnassignFrom(g);})" Class="align-end align-middle" Color=Color.Error Icon="@Icons.Material.Filled.Close" />
+                                    <MudIconButton Size="Size.Small"
+                                                   OnClick="@(()=>{Model.UnassignFrom(g);})"
+                                                   Class="align-end align-middle"
+                                                   Color=Color.Error
+                                                   Icon="@Icons.Material.Filled.Close" />
                                 }
                             </MudStack>
                         </ChildContent>
