Update all MudBlazor components except TreeViews

--- a/BLAZAM/App.razor
+++ b/BLAZAM/App.razor
@@ -59,6 +59,7 @@
 
 <MudThemeProvider IsDarkMode="@darkMode" Theme="@activeTheme.Theme" />
 <MudDialogProvider />
+<MudPopoverProvider />
 <MudSnackbarProvider />
 
 <SessionExpirationWarningProvider />
