--- a/BLAZAMGui/UI/Outputs/Jobs/JobResultDialog.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobResultDialog.razor
@@ -47,7 +47,7 @@
     protected override void OnInitialized()
     {
         var newOptions = MudDialog.Options;
-        newOptions.DisableBackdropClick= true;
+        newOptions.BackdropClick = false;
 
         MudDialog.SetOptions(newOptions);
 
