--- a/BLAZAMGui/UI/Settings/EmailSettings.razor
+++ b/BLAZAMGui/UI/Settings/EmailSettings.razor
@@ -10,7 +10,7 @@
     <SettingsField Label="@AppLocalization["Email Enabled"]">
         <MudSwitch @bind-Value="settings.Enabled"
                    Color="Color.Success"
-                   UnCheckedColor="Color.Error" />
+                   UncheckedColor="Color.Error" />
     </SettingsField>
 
 
@@ -33,7 +33,7 @@
 
         <MudSwitch Label="@AppLocalization["Enabled"]"
                    Color="Color.Success"
-                   UnCheckedColor="Color.Error" 
+                   UncheckedColor="Color.Error"
                    @bind-Value="settings.UseTLS" />
 
     </SettingsField>
@@ -43,7 +43,7 @@
 
         <MudSwitch Label="@AppLocalization["Enabled"]"
                 Color="Color.Success"
-                UnCheckedColor="Color.Error"
+                   UncheckedColor="Color.Error"
                    @bind-Value="settings.UseSMTPAuth" />
 
     </SettingsField>
