--- a/BLAZAMGui/UI/Settings/Modals/UploadCertificateModalContent.razor
+++ b/BLAZAMGui/UI/Settings/Modals/UploadCertificateModalContent.razor
@@ -10,8 +10,7 @@
             <MudButton HtmlTag="label"
                        Variant="Variant.Filled"
                        Color="Color.Primary"
-                       StartIcon="@Icons.Material.Filled.CloudUpload"
-                       for="@context.Id">
+                       StartIcon="@Icons.Material.Filled.CloudUpload">
                 Upload PFX
             </MudButton>
         </ActivatorContent>
@@ -36,8 +35,7 @@
                 <MudButton HtmlTag="label"
                            Variant="Variant.Filled"
                            Color="Color.Primary"
-                           StartIcon="@Icons.Material.Filled.CloudUpload"
-                           for="@context.Id">
+                           StartIcon="@Icons.Material.Filled.CloudUpload">
                     Upload Certificate
                 </MudButton>
             </ActivatorContent>
@@ -58,8 +56,7 @@
                 <MudButton HtmlTag="label"
                            Variant="Variant.Filled"
                            Color="Color.Primary"
-                           StartIcon="@Icons.Material.Filled.CloudUpload"
-                           for="@context.Id">
+                           StartIcon="@Icons.Material.Filled.CloudUpload">
                     Upload Key
                 </MudButton>
             </ActivatorContent>
