--- a/BLAZAMGui/UI/Inputs/AppCloseButton.razor
+++ b/BLAZAMGui/UI/Inputs/AppCloseButton.razor
@@ -1,18 +1,16 @@
 @inherits MudIcon
 <MudButton Class="@(Class+" rounded-circle")"
-         Color="@Color"
-         Disabled=@Disabled
-         Size=@Size
-         IconClass="ma-0"
-         Style=@(Style+"width:min-content;height:min-content;min-width:0")
-         Tag=@Tag
-         
-         StartIcon="@Icons.Material.Filled.Close" @onclick=@OnClick />
+           Color="@Color"
+           Disabled=@Disabled
+           Size=@Size
+           IconClass="ma-0"
+           Style=@(Style+"width:min-content;height:min-content;min-width:0")
+           Tag=@Tag
+           StartIcon="@Icons.Material.Filled.Close"
+           @onclick=@OnClick />
 
 @code {
     [Parameter]
     public EventCallback<MouseEventArgs> OnClick { get; set; }
 
-    [Parameter]
-    public bool Disabled{ get; set; }
 }
