--- a/BLAZAMGui/UI/Inputs/TreeViews/ADTreeView.razor
+++ b/BLAZAMGui/UI/Inputs/TreeViews/ADTreeView.razor
@@ -9,9 +9,8 @@
              Hover="true"
              Color="Color.Success"
              @bind-SelectedValue="SelectedEntry">
-    <ItemTemplate>
+    @* <ItemTemplate>
         <MudTreeViewItem Value="@context"
-                        
                          Items=@GetItems(context)
                          LoadingIconColor="Color.Info"
                          @bind-Expanded="@context.IsExpanded"
@@ -25,7 +24,7 @@
                          Context="itemContext">
 
         </MudTreeViewItem>
-    </ItemTemplate>
+    </ItemTemplate> *@
 
 </MudTreeView>
 
