--- a/BLAZAMGui/UI/Inputs/TreeViews/OUTreeView.razor
+++ b/BLAZAMGui/UI/Inputs/TreeViews/OUTreeView.razor
@@ -2,16 +2,15 @@
 
 <MudText>@Label</MudText>
 
-<MudTreeView T="IDirectoryEntryAdapter"
-             ServerData="GetChildrenAsync"
+<MudTreeView ServerData="GetChildrenAsync"
              Items="RootOU"
              Dense="true"
              Hover="true"
              MaxHeight="400px"
              Color="Color.Primary"
              @bind-SelectedValue="SelectedEntry">
-    <ItemTemplate>
-        <MudTreeViewItem Value="@context"
+@*     <ItemTemplate>
+        <MudTreeViewItem Value="@context.Value"
                          Items=@(GetChildren(context))
                          LoadingIconColor="Color.Info"
                          @bind-Expanded="@context.IsExpanded"
@@ -24,35 +23,8 @@
                           Context="treeContext"
                          EndText="@EndText?.Invoke(context)">
                          
-            @*<Content>
-            @{
-            string itemIcon = Icons.Material.Filled.Folder;
-            }
-            @if (context.IsExpanded)
-            {
-            itemIcon = Icons.Material.Filled.FolderOpen;
-            }
-            @if (Badge != null)
-            {
-            <MudBadge Content="Badge" Overlap="true" Class="mx-6 my-4">
-            <MudTreeViewItemToggleButton  Loading=@context.IsLoadingChildren @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
-            <MudIcon Icon="@itemIcon" Class="ml-0 mr-2" Color="@Color.Default" />
-            <MudText>@context.CanonicalName</MudText>
-
-            @EndAdornment?.Invoke(context)
-
-            </MudBadge>
-            }
-            else
-            {
-            <MudTreeViewItemToggleButton Loading=@context.IsLoadingChildren @bind-Expanded="@context.IsExpanded" Visible="@context.HasChildren()" />
-            <MudIcon Icon="@itemIcon" Class="ml-0 mr-2" Color="@Color.Default" />
-            <MudText>@context.CanonicalName</MudText>
-            @EndAdornment?.Invoke(context)
-            }
-            </Content>*@
         </MudTreeViewItem>
-    </ItemTemplate>
+    </ItemTemplate> *@
 </MudTreeView>
 
 @if (RootOU == null || !RootOU.Any() || LoadingData)
