--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -114,7 +114,7 @@
 
 
 
-        @if (Group.CanEdit && Group.HasUnsavedChanges)
+        @if ((Group.CanEdit || Group.CanUnassign || Group.CanAssign) && Group.HasUnsavedChanges)
         {
             <UnsavedChangesPrompt SaveChanges="SaveChanges" DiscardChanges="DiscardChanges" />
         }
